# jobfish

./: README.md  vercel.json
backend/: main.py  pyproject.toml  railway.toml
frontend/: next.config.mjs  package.json  postcss.config.mjs  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/jobs/: page.tsx
